--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,12 @@
 </head>
 
 <body>
-    
+    <div class="text" id=text>
+        accelerationIncludingGravity:<br>
+        x:<span id="gx">1</span><br>
+        y:<span id="gy">2</span><br>
+        z:<span id="gz">3</span><br>
+    </div>
 </body>
 
 </html>
