--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         x:<span id="gx">1</span><br>
         y:<span id="gy">2</span><br>
         z:<span id="gz">3</span><br>
+        Collide Times:<span id="ctimes"></span>
     </div>
 </body>
 
