--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="text" id=text>
+    <div class="text" id=text style="display: none;">
         accelerationIncludingGravity:<br>
         x:<span id="gx">1</span><br>
         y:<span id="gy">2</span><br>
